posiGen_FullsendBox/src/objects/Promotion__c.object
<CustomObject>
    <fields>
        <fullName>ActiveTime__c</fullName>
        <formula>AND(TODAY() &gt; Date_Start__c, 
     TODAY() &lt; Date_End__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_End__c</fullName>
        <label>Date End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Start__c</fullName>
        <label>Date Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disclaimer__c</fullName>
        <label>Disclaimer</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent Discount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EE_Month_01__c</fullName>
        <label>EE Month 01</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EE_Month_02__c</fullName>
        <label>EE Month 02</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EE_Month_03__c</fullName>
        <label>EE Month 03</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PV_Month_01__c</fullName>
        <label>PV Month 01</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PV_Month_02__c</fullName>
        <label>PV Month 02</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PV_Month_03__c</fullName>
        <label>PV Month 03</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_Start__c</columns>
        <columns>Date_End__c</columns>
        <columns>Discount_Type__c</columns>
        <columns>ActiveTime__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>